Bug 155726 - Calc - change the location of the 'Sort by Color' option in the automatic filter menu
Summary: Calc - change the location of the 'Sort by Color' option in the automatic fil...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-08 05:13 UTC by kabilo
Modified: 2023-06-09 09:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
change the location of the Sort by Color option (39.02 KB, image/jpeg)
2023-06-08 05:15 UTC, kabilo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kabilo 2023-06-08 05:13:01 UTC
Description:
change the location of the 'Sort by Color' option in the automatic filter menu. The option is located in the filter group.

Steps to Reproduce:
1. show auto filter menu


Actual Results:
The 'Sort by Color' option is located in the filter group.

Expected Results:
The 'Sort by Color' option should be displayed in the sort group


Reproducible: Always


User Profile Reset: No

Additional Info:
Comment 1 kabilo 2023-06-08 05:15:09 UTC
Created attachment 187775 [details]
change the location of the Sort by Color option
Comment 2 Julien Nabet 2023-06-08 07:01:21 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

Heiko/Xisco: if ok, I can do the change with this straightforward patch:
diff --git a/sc/source/ui/view/gridwin.cxx b/sc/source/ui/view/gridwin.cxx
index 50b85f1596c3..e68300c0b369 100644
--- a/sc/source/ui/view/gridwin.cxx
+++ b/sc/source/ui/view/gridwin.cxx
@@ -1077,9 +1077,9 @@ void ScGridWindow::LaunchAutoFilterMenu(SCCOL nCol, SCROW nRow)
     mpAutoFilterPopup->addMenuItem(
         ScResId(STR_MENU_SORT_DESC),
         new AutoFilterAction(this, AutoFilterMode::SortDescending));
-    mpAutoFilterPopup->addSeparator();
     if (ScListSubMenuControl* pSubMenu = mpAutoFilterPopup->addSubMenuItem(ScResId(SCSTR_SORT_COLOR), true, true))
         pSubMenu->setPopupStartAction(new AutoFilterColorPopupStartAction(this, pSubMenu, false));
+    mpAutoFilterPopup->addSeparator();
     if (ScListSubMenuControl* pSubMenu = mpAutoFilterPopup->addSubMenuItem(ScResId(SCSTR_FILTER_COLOR), true, true))
         pSubMenu->setPopupStartAction(new AutoFilterColorPopupStartAction(this, pSubMenu, true));
     if (ScListSubMenuControl* pSubMenu = mpAutoFilterPopup->addSubMenuItem(ScResId(SCSTR_FILTER_CONDITION), true, false))
Comment 3 Heiko Tietze 2023-06-08 07:25:53 UTC
Yes, makes sense. 

(Color vs. Colour... I hope the British English comes from a localization and the American English is missing yet)
Comment 4 Julien Nabet 2023-06-08 09:29:26 UTC
Thank you Heiko for the quick feedback, I've submitted the patch on gerrit:
https://gerrit.libreoffice.org/c/core/+/152734
Comment 5 Commit Notification 2023-06-08 13:00:20 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7364b22c45f4f5592f0d9f9d89e66121b8053c4a

tdf#155726: change the location of the 'Sort by Color' option

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2023-06-08 13:28:45 UTC
Patch on gerrit for 7.6 branch here:
https://gerrit.libreoffice.org/c/core/+/152751
Comment 7 Commit Notification 2023-06-09 09:27:48 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/083f3930ce8d74f908b29cfa751ad4805d3f21a8

tdf#155726: change the location of the 'Sort by Color' option

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.