tdf#155726: change the location of the 'Sort by Color' option

Change-Id: I3d1abeb654cd2a7d60c9cec947aa583f9f25126d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152734
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 77e7f77b7b4b3367adc83e5d06f28842f5c5adc2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152751